# bachelor_thesis

./: .gitignore  README.md
PaDIF/: TDetector.cpp  TDetector.h  TEvent.cpp  TEvent.h  TSensor.cpp  TSensor.h
emsa/: CMakeLists.txt  TEvent.h  TModulTest.cpp  TSensor.cpp  config.ini  detector_config.txt  main.cpp
emsa/plots/: AzimuthalDistribution.root  Detector.root  EnergyDistribution.root  Intensity.root  Measurement.root  PolarDistribution.root
emsa/plots/old plots/: Measurement2.root
iceplay/: CMakeLists.txt  TDetector.cpp  TDetector.h  TEvent.cpp  TModulTest.cpp  TSensor.cpp  config.ini  detectorPositions.py  detector_config.txt  main.cpp
iceplay/plots/: Detector.root
